# tasque

./: .gitignore  AUTHORS  COPYING  MAINTAINERS  Makefile.am  Makefile.include  NEWS  README  autogen.sh  configure.ac  tasque-mac.csproj  tasque.csproj  tasque.doap  tasque.sln
RtmNet/: Makefile.am  RtmNet.csproj  Task.cs
WindowsSetup/: Directories.wxs  Files.wxs  Locales.wxs  Product.wxs  Resources.wxs  WindowsSetup.wixproj  license.rtf
data/: Makefile.am  Makefile.in  data.mdproj
data/images/: Makefile.am
m4/: GAC_CHECK_MODULES.m4
osx/Contents/: Info.plist
po/: LINGUAS  Makefile.in  POTFILES.in  POTFILES.skip  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  fi.po  fr.po  gl.po  hu.po  id.po  it.po  ja.po  lt.po  lv.po  nb.po  nds.po  nl.po  pl.po  po.mdproj  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  th.po  tr.po  zh_CN.po  (+1 more)
src/: AppIndicatorTray.cs  Application.cs  Defines.WIN32.cs  GnomeApplication.cs  GtkTray.cs  Makefile.am  NoteWidget.cs  RemoteControl.cs  RemoteControlProxy.cs  StatusIconTray.cs  TaskTreeView.cs  TaskWindow.cs
src/Addins/Backends/: Makefile.am
src/Addins/Backends/Dummy/: AssemblyInfo.cs  DummyBackend.cs  DummyBackend.csproj  DummyList.cs  DummyNote.cs  DummyObject.cs  DummyTask.cs  Makefile.am  Makefile.am.old  Makefile.in  NoteRepository.cs  TaskListRepository.cs  TaskRepository.cs
src/Addins/Backends/Eds/: AssemblyInfo.cs  EdsBackend.csproj  Makefile.in
src/Addins/Backends/Hiveminder/: AssemblyInfo.cs  HiveminderBackend.csproj  HmTask.cs  Makefile.in
src/Addins/Backends/IceCore/: AssemblyInfo.cs  IceBackend.cs  IceCoreBackend.csproj  Makefile.am  Makefile.in
src/Addins/Backends/IceCore/Properties/: AssemblyInfo.cs
src/Addins/Backends/Rtm/: AssemblyInfo.cs  Extensions.cs  Makefile.am  Makefile.in  RtmBackend.cs  RtmBackend.csproj  RtmCategory.cs  RtmList.cs  RtmNote.cs  RtmNoteRepository.cs  RtmTask.cs  RtmTaskListRepository.cs  RtmTaskRepository.cs
src/Addins/Backends/Rtm/Gtk/: RtmPreferencesWidget.cs
src/Addins/Backends/Rtm/Properties/: AssemblyInfo.cs
src/Addins/Backends/Sqlite/: AssemblyInfo.cs  Database.cs  Extensions.cs  Makefile.am  Makefile.am.old  Makefile.in  SqliteBackend.cs  SqliteBackend.csproj  SqliteList.cs  SqliteNoteRepository.cs  SqliteTask.cs  SqliteTaskListRepository.cs  SqliteTaskRepository.cs
src/Addins/Backends/Sqlite/Gtk/: SqlitePreferences.cs
src/Addins/Backends/Sqlite/Properties/: AssemblyInfo.cs
src/Addins/Gtk.Tasque.Columns/: CompleteColumn.cs  DueDateColumn.cs  Gtk.Tasque.Columns.csproj  MyClass.cs  NotesColumn.cs  PriorityColumn.cs  TaskBeingEdited.cs  TaskNameColumn.cs
src/Addins/Gtk.Tasque.Columns/Properties/: AssemblyInfo.cs
src/Addins/Gtk.Tasque.TimerCompleteColumns/: CompleteWithTimerColumn.cs  Gtk.Tasque.TimerCompleteColumns.csproj  TaskCompleteTimer.cs  TaskCompleteTimerStoppedEventArgs.cs  TaskCompleteTimerTickEventArgs.cs  TimerColumn.cs
src/Backends/IceCore/: Makefile.am
src/Backends/Rtm/: RtmBackend.cs  RtmTask.cs
src/Gtk.Tasque/: AllCategory.cs  AppIndicatorTray.cs  Application.cs  CellRendererDate.cs  CompletedTaskGroup.cs  DateButton.cs  Defines.WIN32.cs  Defines.cs.in  GnomeApplication.cs  Gtk.Tasque.csproj  GtkApplication.cs  GtkApplicationBase.cs  GtkLinuxApplication.cs  GtkTray.cs  GtkWinApplication.cs  ITaskColumn.cs  ITaskField.cs  Logger.cs  Makefile.am  Makefile.in  NoteDialog.cs  NoteWidget.cs  PreferencesDialog.cs  Program.cs  RemoteControl.cs  StatusIconTray.cs  TaskCalendar.cs  TaskColumnExtensionAttribute.cs  TaskCompleteTimer.cs  TaskCompleteTimerState.cs  TaskGroup.cs  TaskRowEditingEventArgs.cs  TaskTreeView.cs  TaskView.cs  TaskWindow.cs  Tasque.exe.Defines.config  TimerColumn.cs  TimerTaskField.cs  TreeModelListAdapter.cs  Utilities.cs
src/Gtk.Tasque/Properties/: AssemblyInfo.cs
src/Libraries/RtmNet/: Makefile.am  Makefile.in  RtmNet.csproj
src/Libraries/RtmNet/Properties/: AssemblyInfo.cs
src/MonoMac.Tasque/: MonoMac.Tasque.csproj
src/MonoMac.Tasque/Properties/: AssemblyInfo.cs
src/libtasque/: AbstractTask.cs  AllCategory.cs  CategoryComparer.cs  CompletedTaskGroupModel.cs  IBackend.cs  IBackendPreferences.cs  IContainee.cs  INativeApplication.cs  INoteCore.cs  IPreferences.cs  ITask.cs  ITaskCore.cs  ITaskListCore.cs  ITasqueCore.cs  Makefile.am  Makefile.in  NativeApplication.cs  NoteSupport.cs  Preferences.cs  PreferencesKeys.cs  Task.cs  TaskComparer.cs  TaskGroupModel.cs  TaskGroupModelFactory.cs  TaskParser.cs  TaskPriority.cs  TaskState.cs  libtasque.csproj
src/libtasque/Core/: BackendManager.cs  INote.cs  ITask.cs  ITaskList.cs  ITasqueObject.cs  TaskListType.cs  TaskState.cs
src/libtasque/Core/Impl/: Extensions.cs  IBackendDetachable.cs  IContainer.cs  IIdEditable.cs  IInternalContainee.cs  IInternalTasqueObject.cs  INotifying.cs  InternalBackendManager.TaskListCollection.cs  InternalBackendManager.cs  Note.cs  Task.cs  TaskList.cs  TasqueObject.cs  TasqueObjectCollection.cs
src/libtasque/Data/: BackendExtensionAttribute.cs  BackendInitializationException.cs  Extensions.cs  IBackend.cs  IBackend2.cs  IBackendPreferences.cs  ICollectionRepository.cs  INoteRepository.cs  IRepository.cs  IRepositoryProvider.cs  ITaskListRepository.cs  ITaskRepository.cs  TasqueObjectFactory.cs  TransactionException.cs
src/libtasque/DateFormatters/: DateFormatterFactory.cs  DateSeparatedFormatter.cs  Extensions.cs  RegularExpressionFormatter.cs  TaskParser.cs  TranslatableToken.cs  WeekdayFormatter.cs
src/libtasque/Properties/: AssemblyInfo.cs
src/libtasque/Utils/: AllList.cs  CompletedTaskGroupModel.cs  Preferences.cs  TaskComparer.cs  TaskCompletionDateComparer.cs  TaskGroupModel.cs  TaskListComparer.cs
src/tasque/: Makefile.am  Makefile.in  Program.cs  Tasque.exe.Defines.config.in  tasque.csproj  tasque.in
src/tasque/Properties/: AssemblyInfo.cs
tests/: BackendsFixture.cs  DummyBackendTest.cs  TaskGroupModelTest.cs  TaskParserFixture.cs  TasqueTestsSetup.cs  test_build.sh  tests.csproj
tests/libtasque.Test/: libtasque.Test.csproj
(+13 files in other folders)
